# dumbutils

./: Cargo.toml
src/touchdir/: Cargo.toml  README.md
src/touchdir/src/: main.rs  touchdir.rs
